# assay-protocol

./: .gitignore  ARTICLE11_ANNEXIV_MAPPING.md  CHANGELOG.md  EXECUTOR_MEMBRANE_PROFILE.md  FOR_HUMANS.md  IMPLEMENTORS.md  LICENSE  MASTERY_KIT.md  MEMBRANE_REASON_CODES.md  Makefile  QA_CONTRACT.md  RCE_PROFILE.md  README.md  REASON_CODES.md  SECURITY.md  SPEC.md  TENSIONS.md  control_map.yaml
.github/: qa_contract.yaml
.github/workflows/: qa-contract-drift.yml  test.yml
conformance/: README.md  executor_membrane.md
docs/: REPO_MAP.md
examples/: README.md
examples/anti_demo/: README.md  demo.py
examples/python_demo/: README.md  demo.py
examples/sandbox/: README.md
examples/simulated/: README.md  demo.py  test_classifier.py  verify_episode.py
incidents/: ANTIGRAVITY.md
profiles/: README.md  registry.json
reference/python_membrane/: README.md  pyproject.toml
reference/python_membrane/src/assay_membrane/: __init__.py  _schema.json  credential_verifier.py
reference/python_membrane/tests/: test_credential_verifier.py
schemas/: jurisdiction_receipt.schema.json  rce_episode_contract.schema.json  receipt.schema.json
scripts/: assay_validate.py  crypto_core.py  csp_validate.py  glimps_validate.py  ritual_lint.py
strategy/: EXPERIMENT_LOG.md  RCE_CANONICAL_OBJECT_30D.md
tests/: test_assay_validate_glimps_dispatch.py  test_glimps_birth_receipt.py  test_glimps_emission_census.py  test_glimps_permissions.py  test_glimps_validator.py  test_glimps_wound_receipt.py  test_jurisdiction_receipt_schema.py  test_profile_registry.py
(+35 files in other folders)
