[project]
name = "assay-membrane-reference"
version = "0.1.0"
description = "Assay Executor Membrane Reference Verifier (non-normative, prototype-only)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tim B. Haserjian"}
]

dependencies = [
    "cryptography>=42.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assay_membrane"]

[tool.hatch.build.targets.wheel.force-include]
"src/assay_membrane/_schema.json" = "assay_membrane/_schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["assay_membrane"]
